--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="image/x-icon" rel="shortcut icon" href="https://raw.githubusercontent.com/vsecoder/resume/main/templates/favicon.ico">
     <title>VSECODER resume</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="">
