--- a/templates/index.html
+++ b/templates/index.html
@@ -57,28 +57,28 @@
     <main>
       <div class="border">
         <pre class="pc-header">
-                                _           
-  __   _____  ___  ___ ___   __| | ___ _ __ 
-  \ \ / / __|/ _ \/ __/ _ \ / _` |/ _ \ '__|
-   \ V /\__ \  __/ (_| (_) | (_| |  __/ |   
-    \_/ |___/\___|\___\___/ \__,_|\___|_|     <b>resume</b>
+                              _           
+__   _____  ___  ___ ___   __| | ___ _ __ 
+\ \ / / __|/ _ \/ __/ _ \ / _` |/ _ \ '__|
+ \ V /\__ \  __/ (_| (_) | (_| |  __/ |   
+  \_/ |___/\___|\___\___/ \__,_|\___|_|     <b>resume</b>
 
 
-      <b id="online"></b>
+          <b id="online"></b>
 
 
-      [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
+            [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
         </pre>
         <pre class="mobile-header">
 
 
-  <h2>VSECODER</h2> <b>resume</b>
+      <h2>VSECODER</h2> <b>resume</b>
 
 
-      <i id="online"></i>
+  <i id="online"></i>
 
 
-      [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
+    [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
         </pre>
       </div>
       <div class="border">
@@ -91,7 +91,8 @@
         <p>Also, by the way, this page is on Socket.io, and you see in real time how many users read my resume, cool? I can do it even better! [<a href="https://github.com/vsecoder/resume">SOURCES</a>]</p>
       </div>
       <div class="border">
-        <pre><b>Copyright (c) 2022 - this time. [<a href="https://choosealicense.com/licenses/mit/">LICENSE MIT</a>]</b></pre>
+        <pre><b>Copyright (c) 2022 - this time. 
+        [<a href="https://choosealicense.com/licenses/mit/">LICENSE MIT</a>]</b></pre>
       </div>
     </main>
     <script src="/socket.io/socket.io.js"></script>
