--- a/templates/index.html
+++ b/templates/index.html
@@ -67,25 +67,25 @@ __   _____  ___  ___ ___   __| | ___ _ __
           <b id="online"></b>
 
 
-            [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
+           [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
         </pre>
         <pre class="mobile-header">
 
 
-      <h2>VSECODER</h2> <b>resume</b>
+    <h2>VSECODER</h2> <b>resume</b>
 
 
-  <i id="online"></i>
+<i id="online"></i>
 
 
-    [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
+  [<a href="https://t.me/vsecoder">Telegram</a>]   [<a href="https://github.com/vsecoder">Github</a>]
         </pre>
       </div>
       <div class="border">
         <pre><b>Web design, JavaScript, Python</b></pre>
         <p>Hello, I'm a developer! I have been developing since an early age, and I fell in love with this business not as a hobby, but as a job.</p>
         <p>My resume contains a bunch of different rubbish that I'm too lazy to list, it's better to look at Github for yourself)))</p>
-        <p>P.S. this whole page is written with text without superfluous, while I can write colorful pages!</p>
+        <p>P.S. this whole page is written with text without much extra in just 5 minutes, while I can write colorful pages!</p>
       </div>
       <div class="border">
         <p>Also, by the way, this page is on Socket.io, and you see in real time how many users read my resume, cool? I can do it even better! [<a href="https://github.com/vsecoder/resume">SOURCES</a>]</p>
